# metagenomic-enzyme-browser

./: .gitignore  LICENSE  README.md  app.py  config.py  excel_to_yaml_converter.py
backend/: biomeNames.tsv  environment.yml  enzyme_protein_ids_udd.txt  filtered_enzymes.tsv  filtering_enzymes_and_preparing_tables.py  flaskapp_udd.py  initialise_db.py  initialize_schema_udd.py  model.py  output.tsv  output_2.tsv  pyproject.toml  readassdata_1.py  readassdata_2.py  requirements.txt  routes.py  schema.sql  sql_update_udd.py  subset_300.tsv
backend/templates/: index.html  protein_detail.html  results.html
data/: Copy of flat_schema_entry_all_jan23_final.xlsx  spreadtest.yaml
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/public/: Biome-icons.ai
frontend/src/: middleware.ts
frontend/src/app/: global.css  layout.tsx  page.tsx
frontend/src/app/(pages)/: layout.tsx
frontend/src/app/(pages)/biome/[biome_name]/: page.tsx
frontend/src/app/(pages)/landing/: page.tsx
frontend/src/app/(pages)/results/: page.tsx
frontend/src/app/(pages)/study/[study_id]/: page.tsx
frontend/src/app/(pages)/test/: page.tsx
frontend/src/app/aos/: aos.tsx
frontend/src/app/api/auth/[...nextauth]/: options.ts  route.ts
frontend/src/app/components/: Banner.tsx  BiomeCard.jsx  Breadcrumb.tsx  FlexCard.tsx  Footer.tsx  Loading.tsx  Maps.tsx  SearchBar.tsx  SessionWrapper.tsx  Title.tsx
frontend/src/app/dummydata/: data.tsx
frontend/src/app/styles/: Landing.module.scss
frontend/src/app/types/: gen.s.ts  model.s.ts
(+1 files in other folders)
