[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Flask backend"
authors = ["karthik30122001 <karthikeyan.vpani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-sqlalchemy = "^3.1.1"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
